--- a/scss/style.scss
+++ b/scss/style.scss
@@ -119,3 +119,30 @@ body {
   }
 }
 
+/* Sizes for tag cloud */
+.tag-size-1 {
+  font-size: 80%;
+}
+
+.tag-size-2 {
+  font-size: 100%;
+}
+
+.tag-size-3 {
+  font-size: 120%;
+}
+
+.tag-size-4 {
+  font-size: 140%;
+}
+
+.tag-size-5 {
+  font-size: 160%;
+}
+
+/* Show tags inline */
+.tags.list li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
